# social-daily-report

./: .env.example  .gitignore  .mcp.json  README.md  pyproject.toml  requirements.txt
config/: sources.yaml
content/digests/: 2026-W21.md  2026-W22.md  2026-W23.md  2026-W25.md
content/distribution/: 2026-05-25.md  2026-05-26.md  2026-05-28.md  2026-05-31.md  2026-06-01.md  2026-06-03.md  2026-06-04.md  2026-06-05.md  2026-06-06.md  2026-06-07.md  2026-06-08.md  2026-06-09.md  2026-06-12.md  2026-06-13.md  2026-06-17.md  2026-06-19.md  2026-06-20.md  2026-06-24.md
content/reports/2026-05-20/: ai-devtools.en.md  ai-devtools.th.md  ai-news.en.md  ai-news.th.md  edtech.en.md  edtech.th.md  game-dev.en.md  game-dev.th.md  index.en.md  xr.en.md  (+4 more)
scripts/: check-health.ps1  run-daily.ps1  setup-company-pc.ps1  social-daily-report-monitor.xml  social-daily-report.xml
social_report/: __init__.py  cli.py  dedup.py  distribute.py  mcp_server.py  models.py  monitor.py  normalize.py  weekly.py
social_report/analyze/: client.py  pipeline.py  post_cards.py  prompts.py
social_report/connectors/: __init__.py  base.py  bluesky.py  hackernews.py  lobsters.py  radar.py  reddit.py  rss.py  x.py  x_list.py  youtube.py
social_report/render/: markdown.py
social_report/store/: db.py  files.py
web/: REDESIGN-mockup-report.html  REDESIGN-mockup-variants.html  REDESIGN-mockup.html  REDESIGN.md  REDESIGN_BRIEF.md  astro.config.mjs  package-lock.json  package.json  vercel.json
web/public/: manifest.webmanifest  sw.js
web/scripts/: fetch-thumbs.mjs
web/src/: content.config.ts
(+817 files in other folders)
