[project]
name = "social-daily-report"
version = "0.1.0"
description = "AI workflow: social media -> Opus daily analysis -> bilingual per-topic Markdown for NDF DEV team AIs"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.2"]

[project.scripts]
social-report     = "social_report.cli:main"
social-report-mcp = "social_report.mcp_server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "social_report",
    "social_report.connectors",
    "social_report.analyze",
    "social_report.render",
    "social_report.store",
]
